<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" 
    android:background="@drawable/main_bg"
    style="@style/DarkBg"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        >

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="10pt" >
        </TextView>

        <EditText
            android:id="@+id/Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName" >
        </EditText>

        <RadioGroup
            android:id="@+id/radioGender"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            
            
             >

            <RadioButton
                android:id="@+id/male"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" 
                android:textColor="@android:color/white"
                />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@android:color/white" />

        </RadioGroup>

        <EditText
            android:id="@+id/Email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" >
        </EditText>

        <EditText
            android:id="@+id/Address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:hint="@string/address"
            android:lines="5"
            android:singleLine="false" >
        </EditText>

        <CheckBox
            android:id="@+id/emailAlerts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailAlerts"
            android:textColor="@android:color/white" >

        </CheckBox>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="sendEmail"
            android:text="@string/submit" >
        </Button>
        
    </LinearLayout>

</ScrollView>